合并admin和flygoose 添加初始化账户

--- a/cmd/flygoose/flygoose-config.yaml
+++ b/cmd/flygoose/flygoose-config.yaml
@@ -7,10 +7,10 @@ database:
   # 数据库IP
   host: 127.0.0.1
   # 数据库端口
-  port: 5432
+  port: 3306
   # 数据库名称
   name: db_flygoose
   # 用户名
-  user: flygoose
+  user: root
   # 密码
-  password: flygoose
+  password: root
