--- a/cmd/flygoose/flygoose-config.yaml
+++ b/cmd/flygoose/flygoose-config.yaml
@@ -5,12 +5,12 @@ database:
   # 数据库类型 取值mysql或postgresql
   driver: mysql
   # 数据库IP
-  host: 192.168.168.166
+  host: 127.0.0.1
   # 数据库端口
   port: 3306
   # 数据库名称
-  name: db_09
+  name: db_flygoose
   # 用户名
-  user: hwuser
+  user: flygoose
   # 密码
-  password: wXh%?2;zc3=4
+  password: flygoose
